2009-10-08  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/GridTestAuto.cs: Add some new tests
	  for Grid to ensure that star rows expand in the correct
	  places. r: rolf

2009-10-06  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/ScrollViewerAutomationPeerTest.cs: 
	New methods added: IScrollProvider_HorizontalMethods, 
	IScrollProvider_VerticalMethods and IScrollProvider_Events.

	r: alan

2009-10-06  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/LoadedTest.cs: Add more tests for the Loaded
	  event. The extra ones check the conditions in which loaded
	  event emission is forced and also the order in which the
	  events are raised. r: spouliot

2009-10-05  Chris Toshok  <toshok@ximian.com>

	* System.Windows.Controls/PanelTest.cs: add a few tests to show
	where min/max are being applied, and whether children of a panel
	know about them.

2009-10-05  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/LoadedTest.cs: Add a bunch of extra tests for
	  the Loaded event. r: spouliot

	* System.Windows.Media/VisualTreeHelperTest.cs: Move two
	  Loaded tests to the LoadedTest.cs file. r: spouliot

2009-10-01  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Input/InputMethodTest.cs: Remove [MoonlightBug]
	on existing test and add new test cases

2009-10-01  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.Interop/SilverlightHostTest.cs: Remove 
	[MoonlightBug] on IsVersionSupported

	r: alan

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* security/SecuritySafeCriticalTest.cs: New. Unit tests

	r: jackson

2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser/HtmlPageTest.cs: New. Unit tests

	r: rolf

2009-09-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Input/InputMethodTest.cs:
	  IsInputMethodEnabled defaults to true and also needs a
	  validator to ensure that it's only set on 

2009-09-29  Chris Toshok  <toshok@ximian.com>
